# AgentTwister

./: .gitignore  .mcp.json  CLAUDE.md  README.md  litellm_config.yaml  package-lock.json  package.json  pyproject.toml
.automaker/: active-branches.json  app_spec.txt  categories.json
.automaker/features/adversarial-docx-generator/: agent-output.md  feature.json
.automaker/features/adversarial-pdf-generator/: agent-output.md  feature.json
.automaker/features/analyst-agent/: agent-output.md  feature.json
.automaker/features/architect-reviewer-formatter-agents/: agent-output.md  feature.json
.automaker/features/base-agent-framework/: agent-output.md  feature.json
.automaker/features/chat-interface-v0.1/: agent-output.md  feature.json
.automaker/features/chat-orchestrator-agent/: agent-output.md  feature.json
.automaker/features/evidence-bundle-generation/: agent-output.md  feature.json
.automaker/features/feature-1772799255336-50m20lz4b/: feature.json
.automaker/features/feature-1772799255336-a04s5m2sf/: feature.json
.automaker/features/feature-1772799255336-fcq4xxy5g/: feature.json
.serena/: project.yml
backend/: package-lock.json  package.json
backend/app/: __init__.py  database.py  main.py
backend/scripts/: __init__.py
backend/tests/: __init__.py  playwright.config.ts  test_jcodemunch_mcp.py  verify_payloads.py
data/: AgentTwister.db  schema.json
data/payload-templates/: owasp_llm_payloads.json
docs/: jcodemunch-integration.md  prd.md
frontend/: .gitattributes  .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/assets/: README.md
frontend/public/: browserconfig.xml  index.html  manifest.json
frontend/src/: vite-env.d.ts
(+86 files in other folders)
